# eventstore-rabbitmq

./: .tool-versions  README.md  Taskfile.yml  consumer.py  docker-compose.yml  event_simulator.py  pyproject.toml  replay_api.py  replay_management_ui.py
templates/: index.html
