[tool.poetry]
name = "event-store-demo"
version = "0.1.0"
description = ""
authors = ["Merlin Webster <mjftwebster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
esdbclient = "^1.1.1"
pika = "^1.3.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
requests = "^2.32.3"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]
eventstore = "^0.1"
eventstore-grpc = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
